Fix more button on channel page on mobile

--- a/ui/scss/component/_channel.scss
+++ b/ui/scss/component/_channel.scss
@@ -296,7 +296,9 @@ $actions-z-index: 2;
 
     .claim__menu-button--inline {
       .icon {
-        padding: 10px;
+        padding: 1rem;
+        margin: -1rem;
+        z-index: 10;
       }
     }
   }
